--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="keywords" content="Swashbuckler Diary, 侠客日记, Diary App, 日记应用">
+    <meta name="keywords" content="Sdiray, Diary App, 日记应用">
     <meta name="description" content="An open source, cross platform local diary application">
-    <title>Swashbuckler Diary</title>
+    <title>Sdiray</title>
     <base />
     <link rel="preload" id="webassembly" />
     <script type="text/javascript">
